# OpenCV_Change_Settings

./: LICENSE  README.md
Testing/GUI_FOR_SETTINGS/: CMakeLists.txt  data_settings.cpp  data_settings.h  main.cpp
